ocaml/work/parser.output
   0  $accept : %entry% $end

   1  expr_eof : expr EOF

   2  ty_eof : ty EOF

   3  ty_forall_eof : ty_forall EOF

   4  expr : boolean_expr
   5       | simple_expr COLON ty
   6       | simple_expr COLON ty IF expr
   7       | LET IDENT EQUALS expr IN expr
   8       | fun_expr
   9       | IF expr THEN expr ELSE expr

  10  boolean_expr : relation_expr
  11               | NOT relation_expr
  12               | relation_expr AND relation_expr
  13               | relation_expr OR relation_expr

  14  relation_expr : arithmetic_expr
  15                | arithmetic_expr relation_op arithmetic_expr

  16  arithmetic_expr : simple_expr
  17                  | MINUS simple_expr
  18                  | arithmetic_expr PLUS arithmetic_expr
  19                  | arithmetic_expr MINUS arithmetic_expr
  20                  | arithmetic_expr STAR arithmetic_expr
  21                  | arithmetic_expr SLASH arithmetic_expr
  22                  | arithmetic_expr PERCENT arithmetic_expr

  23  simple_expr : IDENT
  24              | INT
  25              | TRUE
  26              | FALSE
  27              | LPAREN expr RPAREN
  28              | simple_expr LPAREN expr_comma_list RPAREN
  29              | simple_expr LPAREN RPAREN

  30  expr_comma_list : expr
  31                  | expr COMMA expr_comma_list

  32  relation_op : LT
  33              | GT
  34              | LE
  35              | GE
  36              | EQ
  37              | NE

  38  fun_expr : FUN IDENT ARROW expr
  39           | FUN LPAREN param_list RPAREN ARROW expr
  40           | FUN LPAREN RPAREN ARROW expr
  41           | FUN LPAREN param_list RPAREN COLON return_ty ARROW expr
  42           | FUN LPAREN RPAREN COLON return_ty ARROW expr

  43  param_list : param
  44             | param COMMA param_list

  45  param : IDENT
  46        | IDENT COLON ty
  47        | IDENT COLON ty IF expr

  48  return_ty : some_simple_ty
  49            | LPAREN IDENT COLON ty RPAREN
  50            | LPAREN IDENT COLON ty IF expr RPAREN

  51  ident_list : IDENT
  52             | IDENT ident_list

  53  ty_forall : ty
  54            | FORALL LBRACKET ident_list RBRACKET ty

  55  ty : simple_ty
  56     | function_ty
  57     | SOME LBRACKET ident_list RBRACKET ty

  58  function_ty : LPAREN RPAREN ARROW function_ret_ty
  59              | simple_ty ARROW function_ret_ty
  60              | LPAREN refined_ty RPAREN ARROW function_ret_ty
  61              | LPAREN param_ty COMMA param_ty_list RPAREN ARROW function_ret_ty

  62  function_ret_ty : ty
  63                  | LPAREN refined_ty RPAREN

  64  param_ty_list : param_ty
  65                | param_ty COMMA param_ty_list

  66  param_ty : ty
  67           | refined_ty

  68  refined_ty : IDENT COLON ty
  69             | IDENT COLON ty IF expr

  70  some_simple_ty : simple_ty
  71                 | SOME LBRACKET ident_list RBRACKET simple_ty

  72  simple_ty : IDENT
  73            | IDENT LBRACKET ty_comma_list RBRACKET
  74            | LPAREN ty RPAREN

  75  ty_comma_list : ty
  76                | ty COMMA ty_comma_list

  77  %entry% : '\001' expr_eof
  78          | '\002' ty_eof
  79          | '\003' ty_forall_eof

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	.  error

	%entry%  goto 4


state 1
	%entry% : '\001' . expr_eof  (77)

	IDENT  shift 5
	INT  shift 6
	FUN  shift 7
	LET  shift 8
	NOT  shift 9
	IF  shift 10
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	expr_eof  goto 15
	expr  goto 16
	boolean_expr  goto 17
	simple_expr  goto 18
	fun_expr  goto 19
	relation_expr  goto 20
	arithmetic_expr  goto 21


state 2
	%entry% : '\002' . ty_eof  (78)

	IDENT  shift 22
	SOME  shift 23
	LPAREN  shift 24
	.  error

	ty_eof  goto 25
	ty  goto 26
	simple_ty  goto 27
	function_ty  goto 28


state 3
	%entry% : '\003' . ty_forall_eof  (79)

	IDENT  shift 22
	FORALL  shift 29
	SOME  shift 23
	LPAREN  shift 24
	.  error

	ty_forall_eof  goto 30
	ty  goto 31
	ty_forall  goto 32
	simple_ty  goto 27
	function_ty  goto 28


state 4
	$accept : %entry% . $end  (0)

	$end  accept


state 5
	simple_expr : IDENT .  (23)

	.  reduce 23


state 6
	simple_expr : INT .  (24)

	.  reduce 24


state 7
	fun_expr : FUN . IDENT ARROW expr  (38)
	fun_expr : FUN . LPAREN param_list RPAREN ARROW expr  (39)
	fun_expr : FUN . LPAREN RPAREN ARROW expr  (40)
	fun_expr : FUN . LPAREN param_list RPAREN COLON return_ty ARROW expr  (41)
	fun_expr : FUN . LPAREN RPAREN COLON return_ty ARROW expr  (42)

	IDENT  shift 33
	LPAREN  shift 34
	.  error


state 8
	expr : LET . IDENT EQUALS expr IN expr  (7)

	IDENT  shift 35
	.  error


state 9
	boolean_expr : NOT . relation_expr  (11)

	IDENT  shift 5
	INT  shift 6
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	simple_expr  goto 36
	relation_expr  goto 37
	arithmetic_expr  goto 21


state 10
	expr : IF . expr THEN expr ELSE expr  (9)

	IDENT  shift 5
	INT  shift 6
	FUN  shift 7
	LET  shift 8
	NOT  shift 9
	IF  shift 10
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	expr  goto 38
	boolean_expr  goto 17
	simple_expr  goto 18
	fun_expr  goto 19
	relation_expr  goto 20
	arithmetic_expr  goto 21


state 11
	simple_expr : TRUE .  (25)

	.  reduce 25


state 12
	simple_expr : FALSE .  (26)

	.  reduce 26


state 13
	simple_expr : LPAREN . expr RPAREN  (27)

	IDENT  shift 5
	INT  shift 6
	FUN  shift 7
	LET  shift 8
	NOT  shift 9
	IF  shift 10
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	expr  goto 39
	boolean_expr  goto 17
	simple_expr  goto 18
	fun_expr  goto 19
	relation_expr  goto 20
	arithmetic_expr  goto 21


state 14
	arithmetic_expr : MINUS . simple_expr  (17)

	IDENT  shift 5
	INT  shift 6
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	.  error

	simple_expr  goto 40


state 15
	%entry% : '\001' expr_eof .  (77)

	.  reduce 77


state 16
	expr_eof : expr . EOF  (1)

	EOF  shift 41
	.  error


state 17
	expr : boolean_expr .  (4)

	.  reduce 4


state 18
	expr : simple_expr . COLON ty  (5)
	expr : simple_expr . COLON ty IF expr  (6)
	arithmetic_expr : simple_expr .  (16)
	simple_expr : simple_expr . LPAREN expr_comma_list RPAREN  (28)
	simple_expr : simple_expr . LPAREN RPAREN  (29)

	LPAREN  shift 42
	COLON  shift 43
	IN  reduce 16
	AND  reduce 16
	OR  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAREN  reduce 16
	COMMA  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16
	STAR  reduce 16
	SLASH  reduce 16
	PERCENT  reduce 16
	GT  reduce 16
	LT  reduce 16
	GE  reduce 16
	LE  reduce 16
	EQ  reduce 16
	NE  reduce 16
	EOF  reduce 16


state 19
	expr : fun_expr .  (8)

	.  reduce 8


state 20
	boolean_expr : relation_expr .  (10)
	boolean_expr : relation_expr . AND relation_expr  (12)
	boolean_expr : relation_expr . OR relation_expr  (13)

	AND  shift 44
	OR  shift 45
	IN  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAREN  reduce 10
	COMMA  reduce 10
	EOF  reduce 10


state 21
	relation_expr : arithmetic_expr .  (14)
	relation_expr : arithmetic_expr . relation_op arithmetic_expr  (15)
	arithmetic_expr : arithmetic_expr . PLUS arithmetic_expr  (18)
	arithmetic_expr : arithmetic_expr . MINUS arithmetic_expr  (19)
	arithmetic_expr : arithmetic_expr . STAR arithmetic_expr  (20)
	arithmetic_expr : arithmetic_expr . SLASH arithmetic_expr  (21)
	arithmetic_expr : arithmetic_expr . PERCENT arithmetic_expr  (22)

	PLUS  shift 46
	MINUS  shift 47
	STAR  shift 48
	SLASH  shift 49
	PERCENT  shift 50
	GT  shift 51
	LT  shift 52
	GE  shift 53
	LE  shift 54
	EQ  shift 55
	NE  shift 56
	IN  reduce 14
	AND  reduce 14
	OR  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAREN  reduce 14
	COMMA  reduce 14
	EOF  reduce 14

	relation_op  goto 57


state 22
	simple_ty : IDENT .  (72)
	simple_ty : IDENT . LBRACKET ty_comma_list RBRACKET  (73)

	LBRACKET  shift 58
	IN  reduce 72
	IF  reduce 72
	THEN  reduce 72
	ELSE  reduce 72
	RPAREN  reduce 72
	RBRACKET  reduce 72
	ARROW  reduce 72
	COMMA  reduce 72
	EOF  reduce 72


state 23
	ty : SOME . LBRACKET ident_list RBRACKET ty  (57)

	LBRACKET  shift 59
	.  error


state 24
	function_ty : LPAREN . RPAREN ARROW function_ret_ty  (58)
	function_ty : LPAREN . refined_ty RPAREN ARROW function_ret_ty  (60)
	function_ty : LPAREN . param_ty COMMA param_ty_list RPAREN ARROW function_ret_ty  (61)
	simple_ty : LPAREN . ty RPAREN  (74)

	IDENT  shift 60
	SOME  shift 23
	LPAREN  shift 24
	RPAREN  shift 61
	.  error

	ty  goto 62
	simple_ty  goto 27
	function_ty  goto 28
	refined_ty  goto 63
	param_ty  goto 64


state 25
	%entry% : '\002' ty_eof .  (78)

	.  reduce 78


state 26
	ty_eof : ty . EOF  (2)

	EOF  shift 65
	.  error


state 27
	ty : simple_ty .  (55)
	function_ty : simple_ty . ARROW function_ret_ty  (59)

	ARROW  shift 66
	IN  reduce 55
	IF  reduce 55
	THEN  reduce 55
	ELSE  reduce 55
	RPAREN  reduce 55
	RBRACKET  reduce 55
	COMMA  reduce 55
	EOF  reduce 55


state 28
	ty : function_ty .  (56)

	.  reduce 56


state 29
	ty_forall : FORALL . LBRACKET ident_list RBRACKET ty  (54)

	LBRACKET  shift 67
	.  error


state 30
	%entry% : '\003' ty_forall_eof .  (79)

	.  reduce 79


state 31
	ty_forall : ty .  (53)

	.  reduce 53


state 32
	ty_forall_eof : ty_forall . EOF  (3)

	EOF  shift 68
	.  error


state 33
	fun_expr : FUN IDENT . ARROW expr  (38)

	ARROW  shift 69
	.  error


state 34
	fun_expr : FUN LPAREN . param_list RPAREN ARROW expr  (39)
	fun_expr : FUN LPAREN . RPAREN ARROW expr  (40)
	fun_expr : FUN LPAREN . param_list RPAREN COLON return_ty ARROW expr  (41)
	fun_expr : FUN LPAREN . RPAREN COLON return_ty ARROW expr  (42)

	IDENT  shift 70
	RPAREN  shift 71
	.  error

	param_list  goto 72
	param  goto 73


state 35
	expr : LET IDENT . EQUALS expr IN expr  (7)

	EQUALS  shift 74
	.  error


state 36
	arithmetic_expr : simple_expr .  (16)
	simple_expr : simple_expr . LPAREN expr_comma_list RPAREN  (28)
	simple_expr : simple_expr . LPAREN RPAREN  (29)

	LPAREN  shift 42
	IN  reduce 16
	AND  reduce 16
	OR  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAREN  reduce 16
	COMMA  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16
	STAR  reduce 16
	SLASH  reduce 16
	PERCENT  reduce 16
	GT  reduce 16
	LT  reduce 16
	GE  reduce 16
	LE  reduce 16
	EQ  reduce 16
	NE  reduce 16
	EOF  reduce 16


state 37
	boolean_expr : NOT relation_expr .  (11)

	.  reduce 11


state 38
	expr : IF expr . THEN expr ELSE expr  (9)

	THEN  shift 75
	.  error


state 39
	simple_expr : LPAREN expr . RPAREN  (27)

	RPAREN  shift 76
	.  error


state 40
	arithmetic_expr : MINUS simple_expr .  (17)
	simple_expr : simple_expr . LPAREN expr_comma_list RPAREN  (28)
	simple_expr : simple_expr . LPAREN RPAREN  (29)

	LPAREN  shift 42
	IN  reduce 17
	AND  reduce 17
	OR  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAREN  reduce 17
	COMMA  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17
	STAR  reduce 17
	SLASH  reduce 17
	PERCENT  reduce 17
	GT  reduce 17
	LT  reduce 17
	GE  reduce 17
	LE  reduce 17
	EQ  reduce 17
	NE  reduce 17
	EOF  reduce 17


state 41
	expr_eof : expr EOF .  (1)

	.  reduce 1


state 42
	simple_expr : simple_expr LPAREN . expr_comma_list RPAREN  (28)
	simple_expr : simple_expr LPAREN . RPAREN  (29)

	IDENT  shift 5
	INT  shift 6
	FUN  shift 7
	LET  shift 8
	NOT  shift 9
	IF  shift 10
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	RPAREN  shift 77
	MINUS  shift 14
	.  error

	expr  goto 78
	boolean_expr  goto 17
	simple_expr  goto 18
	fun_expr  goto 19
	relation_expr  goto 20
	arithmetic_expr  goto 21
	expr_comma_list  goto 79


state 43
	expr : simple_expr COLON . ty  (5)
	expr : simple_expr COLON . ty IF expr  (6)

	IDENT  shift 22
	SOME  shift 23
	LPAREN  shift 24
	.  error

	ty  goto 80
	simple_ty  goto 27
	function_ty  goto 28


state 44
	boolean_expr : relation_expr AND . relation_expr  (12)

	IDENT  shift 5
	INT  shift 6
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	simple_expr  goto 36
	relation_expr  goto 81
	arithmetic_expr  goto 21


state 45
	boolean_expr : relation_expr OR . relation_expr  (13)

	IDENT  shift 5
	INT  shift 6
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	simple_expr  goto 36
	relation_expr  goto 82
	arithmetic_expr  goto 21


state 46
	arithmetic_expr : arithmetic_expr PLUS . arithmetic_expr  (18)

	IDENT  shift 5
	INT  shift 6
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	simple_expr  goto 36
	arithmetic_expr  goto 83


state 47
	arithmetic_expr : arithmetic_expr MINUS . arithmetic_expr  (19)

	IDENT  shift 5
	INT  shift 6
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	simple_expr  goto 36
	arithmetic_expr  goto 84


state 48
	arithmetic_expr : arithmetic_expr STAR . arithmetic_expr  (20)

	IDENT  shift 5
	INT  shift 6
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	simple_expr  goto 36
	arithmetic_expr  goto 85


state 49
	arithmetic_expr : arithmetic_expr SLASH . arithmetic_expr  (21)

	IDENT  shift 5
	INT  shift 6
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	simple_expr  goto 36
	arithmetic_expr  goto 86


state 50
	arithmetic_expr : arithmetic_expr PERCENT . arithmetic_expr  (22)

	IDENT  shift 5
	INT  shift 6
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	simple_expr  goto 36
	arithmetic_expr  goto 87


state 51
	relation_op : GT .  (33)

	.  reduce 33


state 52
	relation_op : LT .  (32)

	.  reduce 32


state 53
	relation_op : GE .  (35)

	.  reduce 35


state 54
	relation_op : LE .  (34)

	.  reduce 34


state 55
	relation_op : EQ .  (36)

	.  reduce 36


state 56
	relation_op : NE .  (37)

	.  reduce 37


state 57
	relation_expr : arithmetic_expr relation_op . arithmetic_expr  (15)

	IDENT  shift 5
	INT  shift 6
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	simple_expr  goto 36
	arithmetic_expr  goto 88


state 58
	simple_ty : IDENT LBRACKET . ty_comma_list RBRACKET  (73)

	IDENT  shift 22
	SOME  shift 23
	LPAREN  shift 24
	.  error

	ty  goto 89
	simple_ty  goto 27
	function_ty  goto 28
	ty_comma_list  goto 90


state 59
	ty : SOME LBRACKET . ident_list RBRACKET ty  (57)

	IDENT  shift 91
	.  error

	ident_list  goto 92


state 60
	refined_ty : IDENT . COLON ty  (68)
	refined_ty : IDENT . COLON ty IF expr  (69)
	simple_ty : IDENT .  (72)
	simple_ty : IDENT . LBRACKET ty_comma_list RBRACKET  (73)

	LBRACKET  shift 58
	COLON  shift 93
	RPAREN  reduce 72
	ARROW  reduce 72
	COMMA  reduce 72


state 61
	function_ty : LPAREN RPAREN . ARROW function_ret_ty  (58)

	ARROW  shift 94
	.  error


state 62
	param_ty : ty .  (66)
	simple_ty : LPAREN ty . RPAREN  (74)

	RPAREN  shift 95
	COMMA  reduce 66


state 63
	function_ty : LPAREN refined_ty . RPAREN ARROW function_ret_ty  (60)
	param_ty : refined_ty .  (67)

	RPAREN  shift 96
	COMMA  reduce 67


state 64
	function_ty : LPAREN param_ty . COMMA param_ty_list RPAREN ARROW function_ret_ty  (61)

	COMMA  shift 97
	.  error


state 65
	ty_eof : ty EOF .  (2)

	.  reduce 2


state 66
	function_ty : simple_ty ARROW . function_ret_ty  (59)

	IDENT  shift 22
	SOME  shift 23
	LPAREN  shift 98
	.  error

	ty  goto 99
	simple_ty  goto 27
	function_ty  goto 28
	function_ret_ty  goto 100


state 67
	ty_forall : FORALL LBRACKET . ident_list RBRACKET ty  (54)

	IDENT  shift 91
	.  error

	ident_list  goto 101


state 68
	ty_forall_eof : ty_forall EOF .  (3)

	.  reduce 3


state 69
	fun_expr : FUN IDENT ARROW . expr  (38)

	IDENT  shift 5
	INT  shift 6
	FUN  shift 7
	LET  shift 8
	NOT  shift 9
	IF  shift 10
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	expr  goto 102
	boolean_expr  goto 17
	simple_expr  goto 18
	fun_expr  goto 19
	relation_expr  goto 20
	arithmetic_expr  goto 21


state 70
	param : IDENT .  (45)
	param : IDENT . COLON ty  (46)
	param : IDENT . COLON ty IF expr  (47)

	COLON  shift 103
	RPAREN  reduce 45
	COMMA  reduce 45


state 71
	fun_expr : FUN LPAREN RPAREN . ARROW expr  (40)
	fun_expr : FUN LPAREN RPAREN . COLON return_ty ARROW expr  (42)

	ARROW  shift 104
	COLON  shift 105
	.  error


state 72
	fun_expr : FUN LPAREN param_list . RPAREN ARROW expr  (39)
	fun_expr : FUN LPAREN param_list . RPAREN COLON return_ty ARROW expr  (41)

	RPAREN  shift 106
	.  error


state 73
	param_list : param .  (43)
	param_list : param . COMMA param_list  (44)

	COMMA  shift 107
	RPAREN  reduce 43


state 74
	expr : LET IDENT EQUALS . expr IN expr  (7)

	IDENT  shift 5
	INT  shift 6
	FUN  shift 7
	LET  shift 8
	NOT  shift 9
	IF  shift 10
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	expr  goto 108
	boolean_expr  goto 17
	simple_expr  goto 18
	fun_expr  goto 19
	relation_expr  goto 20
	arithmetic_expr  goto 21


state 75
	expr : IF expr THEN . expr ELSE expr  (9)

	IDENT  shift 5
	INT  shift 6
	FUN  shift 7
	LET  shift 8
	NOT  shift 9
	IF  shift 10
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	expr  goto 109
	boolean_expr  goto 17
	simple_expr  goto 18
	fun_expr  goto 19
	relation_expr  goto 20
	arithmetic_expr  goto 21


state 76
	simple_expr : LPAREN expr RPAREN .  (27)

	.  reduce 27


state 77
	simple_expr : simple_expr LPAREN RPAREN .  (29)

	.  reduce 29


state 78
	expr_comma_list : expr .  (30)
	expr_comma_list : expr . COMMA expr_comma_list  (31)

	COMMA  shift 110
	RPAREN  reduce 30


state 79
	simple_expr : simple_expr LPAREN expr_comma_list . RPAREN  (28)

	RPAREN  shift 111
	.  error


state 80
	expr : simple_expr COLON ty .  (5)
	expr : simple_expr COLON ty . IF expr  (6)

	IF  shift 112
	IN  reduce 5
	THEN  reduce 5
	ELSE  reduce 5
	RPAREN  reduce 5
	COMMA  reduce 5
	EOF  reduce 5


state 81
	boolean_expr : relation_expr AND relation_expr .  (12)

	.  reduce 12


state 82
	boolean_expr : relation_expr OR relation_expr .  (13)

	.  reduce 13


state 83
	arithmetic_expr : arithmetic_expr . PLUS arithmetic_expr  (18)
	arithmetic_expr : arithmetic_expr PLUS arithmetic_expr .  (18)
	arithmetic_expr : arithmetic_expr . MINUS arithmetic_expr  (19)
	arithmetic_expr : arithmetic_expr . STAR arithmetic_expr  (20)
	arithmetic_expr : arithmetic_expr . SLASH arithmetic_expr  (21)
	arithmetic_expr : arithmetic_expr . PERCENT arithmetic_expr  (22)

	STAR  shift 48
	SLASH  shift 49
	PERCENT  shift 50
	IN  reduce 18
	AND  reduce 18
	OR  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAREN  reduce 18
	COMMA  reduce 18
	PLUS  reduce 18
	MINUS  reduce 18
	GT  reduce 18
	LT  reduce 18
	GE  reduce 18
	LE  reduce 18
	EQ  reduce 18
	NE  reduce 18
	EOF  reduce 18


state 84
	arithmetic_expr : arithmetic_expr . PLUS arithmetic_expr  (18)
	arithmetic_expr : arithmetic_expr . MINUS arithmetic_expr  (19)
	arithmetic_expr : arithmetic_expr MINUS arithmetic_expr .  (19)
	arithmetic_expr : arithmetic_expr . STAR arithmetic_expr  (20)
	arithmetic_expr : arithmetic_expr . SLASH arithmetic_expr  (21)
	arithmetic_expr : arithmetic_expr . PERCENT arithmetic_expr  (22)

	STAR  shift 48
	SLASH  shift 49
	PERCENT  shift 50
	IN  reduce 19
	AND  reduce 19
	OR  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAREN  reduce 19
	COMMA  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19
	GT  reduce 19
	LT  reduce 19
	GE  reduce 19
	LE  reduce 19
	EQ  reduce 19
	NE  reduce 19
	EOF  reduce 19


state 85
	arithmetic_expr : arithmetic_expr . PLUS arithmetic_expr  (18)
	arithmetic_expr : arithmetic_expr . MINUS arithmetic_expr  (19)
	arithmetic_expr : arithmetic_expr . STAR arithmetic_expr  (20)
	arithmetic_expr : arithmetic_expr STAR arithmetic_expr .  (20)
	arithmetic_expr : arithmetic_expr . SLASH arithmetic_expr  (21)
	arithmetic_expr : arithmetic_expr . PERCENT arithmetic_expr  (22)

	.  reduce 20


state 86
	arithmetic_expr : arithmetic_expr . PLUS arithmetic_expr  (18)
	arithmetic_expr : arithmetic_expr . MINUS arithmetic_expr  (19)
	arithmetic_expr : arithmetic_expr . STAR arithmetic_expr  (20)
	arithmetic_expr : arithmetic_expr . SLASH arithmetic_expr  (21)
	arithmetic_expr : arithmetic_expr SLASH arithmetic_expr .  (21)
	arithmetic_expr : arithmetic_expr . PERCENT arithmetic_expr  (22)

	.  reduce 21


state 87
	arithmetic_expr : arithmetic_expr . PLUS arithmetic_expr  (18)
	arithmetic_expr : arithmetic_expr . MINUS arithmetic_expr  (19)
	arithmetic_expr : arithmetic_expr . STAR arithmetic_expr  (20)
	arithmetic_expr : arithmetic_expr . SLASH arithmetic_expr  (21)
	arithmetic_expr : arithmetic_expr . PERCENT arithmetic_expr  (22)
	arithmetic_expr : arithmetic_expr PERCENT arithmetic_expr .  (22)

	.  reduce 22


state 88
	relation_expr : arithmetic_expr relation_op arithmetic_expr .  (15)
	arithmetic_expr : arithmetic_expr . PLUS arithmetic_expr  (18)
	arithmetic_expr : arithmetic_expr . MINUS arithmetic_expr  (19)
	arithmetic_expr : arithmetic_expr . STAR arithmetic_expr  (20)
	arithmetic_expr : arithmetic_expr . SLASH arithmetic_expr  (21)
	arithmetic_expr : arithmetic_expr . PERCENT arithmetic_expr  (22)

	PLUS  shift 46
	MINUS  shift 47
	STAR  shift 48
	SLASH  shift 49
	PERCENT  shift 50
	IN  reduce 15
	AND  reduce 15
	OR  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAREN  reduce 15
	COMMA  reduce 15
	EOF  reduce 15


state 89
	ty_comma_list : ty .  (75)
	ty_comma_list : ty . COMMA ty_comma_list  (76)

	COMMA  shift 113
	RBRACKET  reduce 75


state 90
	simple_ty : IDENT LBRACKET ty_comma_list . RBRACKET  (73)

	RBRACKET  shift 114
	.  error


state 91
	ident_list : IDENT .  (51)
	ident_list : IDENT . ident_list  (52)

	IDENT  shift 91
	RBRACKET  reduce 51

	ident_list  goto 115


state 92
	ty : SOME LBRACKET ident_list . RBRACKET ty  (57)

	RBRACKET  shift 116
	.  error


state 93
	refined_ty : IDENT COLON . ty  (68)
	refined_ty : IDENT COLON . ty IF expr  (69)

	IDENT  shift 22
	SOME  shift 23
	LPAREN  shift 24
	.  error

	ty  goto 117
	simple_ty  goto 27
	function_ty  goto 28


state 94
	function_ty : LPAREN RPAREN ARROW . function_ret_ty  (58)

	IDENT  shift 22
	SOME  shift 23
	LPAREN  shift 98
	.  error

	ty  goto 99
	simple_ty  goto 27
	function_ty  goto 28
	function_ret_ty  goto 118


state 95
	simple_ty : LPAREN ty RPAREN .  (74)

	.  reduce 74


state 96
	function_ty : LPAREN refined_ty RPAREN . ARROW function_ret_ty  (60)

	ARROW  shift 119
	.  error


state 97
	function_ty : LPAREN param_ty COMMA . param_ty_list RPAREN ARROW function_ret_ty  (61)

	IDENT  shift 60
	SOME  shift 23
	LPAREN  shift 24
	.  error

	ty  goto 120
	simple_ty  goto 27
	function_ty  goto 28
	refined_ty  goto 121
	param_ty  goto 122
	param_ty_list  goto 123


state 98
	function_ty : LPAREN . RPAREN ARROW function_ret_ty  (58)
	function_ty : LPAREN . refined_ty RPAREN ARROW function_ret_ty  (60)
	function_ty : LPAREN . param_ty COMMA param_ty_list RPAREN ARROW function_ret_ty  (61)
	function_ret_ty : LPAREN . refined_ty RPAREN  (63)
	simple_ty : LPAREN . ty RPAREN  (74)

	IDENT  shift 60
	SOME  shift 23
	LPAREN  shift 24
	RPAREN  shift 61
	.  error

	ty  goto 62
	simple_ty  goto 27
	function_ty  goto 28
	refined_ty  goto 124
	param_ty  goto 64


state 99
	function_ret_ty : ty .  (62)

	.  reduce 62


state 100
	function_ty : simple_ty ARROW function_ret_ty .  (59)

	.  reduce 59


state 101
	ty_forall : FORALL LBRACKET ident_list . RBRACKET ty  (54)

	RBRACKET  shift 125
	.  error


state 102
	fun_expr : FUN IDENT ARROW expr .  (38)

	.  reduce 38


state 103
	param : IDENT COLON . ty  (46)
	param : IDENT COLON . ty IF expr  (47)

	IDENT  shift 22
	SOME  shift 23
	LPAREN  shift 24
	.  error

	ty  goto 126
	simple_ty  goto 27
	function_ty  goto 28


state 104
	fun_expr : FUN LPAREN RPAREN ARROW . expr  (40)

	IDENT  shift 5
	INT  shift 6
	FUN  shift 7
	LET  shift 8
	NOT  shift 9
	IF  shift 10
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	expr  goto 127
	boolean_expr  goto 17
	simple_expr  goto 18
	fun_expr  goto 19
	relation_expr  goto 20
	arithmetic_expr  goto 21


state 105
	fun_expr : FUN LPAREN RPAREN COLON . return_ty ARROW expr  (42)

	IDENT  shift 22
	SOME  shift 128
	LPAREN  shift 129
	.  error

	return_ty  goto 130
	some_simple_ty  goto 131
	simple_ty  goto 132


state 106
	fun_expr : FUN LPAREN param_list RPAREN . ARROW expr  (39)
	fun_expr : FUN LPAREN param_list RPAREN . COLON return_ty ARROW expr  (41)

	ARROW  shift 133
	COLON  shift 134
	.  error


state 107
	param_list : param COMMA . param_list  (44)

	IDENT  shift 70
	.  error

	param_list  goto 135
	param  goto 73


state 108
	expr : LET IDENT EQUALS expr . IN expr  (7)

	IN  shift 136
	.  error


state 109
	expr : IF expr THEN expr . ELSE expr  (9)

	ELSE  shift 137
	.  error


state 110
	expr_comma_list : expr COMMA . expr_comma_list  (31)

	IDENT  shift 5
	INT  shift 6
	FUN  shift 7
	LET  shift 8
	NOT  shift 9
	IF  shift 10
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	expr  goto 78
	boolean_expr  goto 17
	simple_expr  goto 18
	fun_expr  goto 19
	relation_expr  goto 20
	arithmetic_expr  goto 21
	expr_comma_list  goto 138


state 111
	simple_expr : simple_expr LPAREN expr_comma_list RPAREN .  (28)

	.  reduce 28


state 112
	expr : simple_expr COLON ty IF . expr  (6)

	IDENT  shift 5
	INT  shift 6
	FUN  shift 7
	LET  shift 8
	NOT  shift 9
	IF  shift 10
	TRUE  shift 11
	FALSE  shift 12
	LPAREN  shift 13
	MINUS  shift 14
	.  error

	expr  goto 139
	boolean_expr  goto 17
	simple_expr  goto 18
	fun_expr  goto 19
	relation_expr  goto 20
	arithmetic_expr  goto 21


state 113
	ty_comma_list : ty COMMA . ty_comma_list  (76)

	IDENT  shift 22
	SOME  shift 23
	LPAREN  shift 24
	.  error

	ty  goto 89
	simple_ty  goto 27
	function_ty  goto 28
	ty_comma_list  goto 140


state 114
	simple_ty : IDENT LBRACKET ty_comma_list RBRACKET .  (73)

	.  reduce 73


state 115
	ident_list : IDENT ident_list .  (52)

	.  reduce 52


state 116
	ty : SOME LBRACKET ident_list RBRACKET . ty  (57)

	IDENT  shift 22
	SOME  shift 23
	LPAREN  shift 24
	.  error

	ty  goto 141
	simple_ty  goto 27
	function_ty  goto 28

